      to fit. (CNY-3205)
    * The Run build action now does path-based build requirement
      discovery like most build actions. (CNY-3222)
    * Conary now allows identical files to be shared during installs
      and updates. Both troves own the shared files, and they must be
      updated at the same time when the shared files change.

  o Bug Fixes:
    * In-core changesets could be merged into a ReadOnlyChangeSet a single
      time. After multiple merges reset() no longer reset the underlying
      in-core changeset.
    * Conary no longer exits with an unhandled KeyError exception if
      an unknown dependency type is encountered in the local
      database. (CNY-3232)
    * Decompression with xz is preferred over unlzma, as CNY-3194
      intended. (CNY-3231)
    * rpm2cpio now correctly handles rpm packages compressed with xz.
      (CNY-3234)
    * Unpacking an RPM with addArchive or addCapsule now functions
      correctly even if the CPIO archive in the RPM contains a
      non-traversable directory. (CNY-3244)
    * When running an external entitlement generator, use /dev/null for
      stdin instead of closing the file descriptor

  o Internal Changes:
    * Repository internal getfile function now avoids and database access
      when no files have been requested
    * Use bulk operatings for loading troveinfo data, speeding up repository
      commits.
    * Committing changesets now iterates over troves the changeset is
      relative to rather than getting them one at a time, significantly
      reducing the number of sql calls.
    * Conary now uses a single call when validating that file objects exist
      in the repository during a commit.
    * Repository commits now handle file paths and file streams separately
      to reduce the size of the temporary tables and the commit path.
    * The number of SQL calls used to create the flavors needed by a repository
      commit has been dramatically reduced.